Retrieving data API fixed